syntax = "proto2";

package groupproto;


option java_package = "libsignal.protocol.groups";
option java_outer_classname = "GroupProtos";


message SenderKeyMessage {
	optional uint32 id         = 1;
	optional uint32 iteration  = 2;
	optional bytes  ciphertext = 3;
  }
  
  message SenderKeyDistributionMessage {
	optional uint32 id         = 1;
	optional uint32 iteration  = 2;
	optional bytes  chain_key   = 3;
	optional bytes  signing_key = 4;
  }
  
  message SenderChainKey {
    optional uint32 iteration = 1;
    optional bytes  seed      = 2;
}

message SenderMessageKey {
    optional uint32 iteration = 1;
    optional bytes  seed      = 2;
}

message SenderSigningKey {
    optional bytes public  = 1;
    optional bytes private = 2;
}

message SenderKeyStateStructure {
    optional uint32           sender_key_id       = 1;
    optional SenderChainKey   sender_chain_key    = 2;
    optional SenderSigningKey sender_signing_key  = 3;
    repeated SenderMessageKey sender_message_keys = 4;
}

message SenderKeyRecordStructure {
    repeated SenderKeyStateStructure sender_key_states = 1;
}